--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,80 @@
 /*font-family: 'Abril Fatface', cursive;
 font-family: 'Poppins', sans-serif;*/
 
-h1 {
-  font-size: 96px;
+body {
   font-family: "Poppins", sans-serif;
+}
+
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
+    url(../images/lisbon.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  text-align: center;
+  padding: 200px 0;
+}
+
+header h1 {
+  font-weight: 700;
+  font-size: 96px;
+  line-height: 1;
+  margin: 30px 0;
+}
+
+header h2 {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 1.5;
+  margin: 0;
+}
+
+header h3 {
+  font-weight: 900;
+  size: 24px;
+  letter-spacing: 5px;
+  line-height: 1.3;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+header a {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  letter-spacing: 3px;
+  color: #272044;
+  text-transform: uppercase;
+  padding: 16px 32px;
+  background-color: white;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 48px;
+}
+
+@media (max-width: 900px) {
+  header {
+    padding: 60px 0;
+  }
+  header h1 {
+    font-size: 48px;
+  }
+
+  header h2 {
+    font-size: 20px;
+  }
+
+  header h3 {
+    font-size: 12px;
+  }
+
+  header a {
+    font-size: 14px;
+    padding: 10px 18px;
+  }
 }
