Added the first section and made it responsive

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@ font-family: 'Poppins', sans-serif;*/
 body {
   font-family: "Poppins", sans-serif;
   margin: 0;
+  background-color: #181525;
 }
 
 .container {
@@ -14,10 +15,19 @@ body {
 section {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 100px 0;
 }
 
 .grid {
   display: grid;
+  grid-gap: 64px;
+}
+
+.grid-2-columns {
+  grid-template-columns: 1fr 1fr;
+}
+
+.grid-3-columns-first-one-narrow {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
@@ -68,6 +78,40 @@ header a {
   margin-top: 48px;
 }
 
+main {
+  background-color: white;
+}
+
+section h2 {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 5px;
+  text-align: left;
+  opacity: 30%;
+  text-transform: uppercase;
+}
+
+section h3 {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 50px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin: 0;
+}
+
+section p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+}
+
+.img-responsive {
+  max-width: 100%;
+}
+
 footer {
   color: white;
   background-image: linear-gradient(
@@ -77,7 +121,6 @@ footer {
     url(../images/lisbon-footer.png);
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 100px 0;
 }
 
 footer h3 {
@@ -92,7 +135,6 @@ footer p {
   line-height: 24px;
   text-align: left;
   opacity: 0.7;
-  margin-right: 20px;
 }
 
 footer ul {
@@ -127,5 +169,14 @@ footer a {
   header a {
     font-size: 14px;
     padding: 10px 18px;
+  }
+
+  .grid {
+    grid-template-columns: 1fr;
+    grid-gap: 30px;
+  }
+
+  section {
+    padding: 40px;
   }
 }
