--- a/src/styles.css
+++ b/src/styles.css
@@ -13,9 +13,22 @@ body {
 }
 
 section {
-  max-width: 1200px;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 100px;
+}
+
+.btn {
+  color: white;
+  background-color: #462cb2;
+  display: block;
+  margin: 0 auto;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 21px;
+  letter-spacing: 3px;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
 }
 
 .grid {
@@ -29,6 +42,23 @@ section {
 
 .grid-3-columns-first-one-narrow {
   grid-template-columns: 1fr 2fr 2fr;
+}
+
+.grid-3-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.card {
+  background-color: white;
+  margin: 30px 0;
+}
+
+.card-body {
+  padding: 30px;
+}
+
+.card-footer {
+  padding: 0 30px 30px;
 }
 
 header {
@@ -82,6 +112,32 @@ main {
   background-color: white;
 }
 
+.card h4 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1;
+  text-align: left;
+  color: #272044;
+  margin: 0;
+}
+
+.card h5 {
+  margin: 0;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 20px;
+  text-align: left;
+  color: #272044;
+}
+
+.card p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  opacity: 70%;
+}
+
 section h2 {
   font-size: 16px;
   font-weight: 700;
@@ -110,6 +166,15 @@ section p {
 
 .img-responsive {
   max-width: 100%;
+  display: block;
+}
+
+section.secondary {
+  background: #f8f8f8;
+}
+
+.text-center {
+  text-align: center;
 }
 
 footer {
