Added responsive Google maps embed

--- a/src/styles.css
+++ b/src/styles.css
@@ -48,9 +48,18 @@ section {
   grid-template-columns: 1fr 1fr 1fr;
 }
 
+.embed {
+  width: 100%;
+  aspect-ratio: 1/1;
+}
+
 .card {
   background-color: white;
   margin: 30px 0;
+}
+
+.card-header.grid {
+  grid-gap: 0;
 }
 
 .card-body {
@@ -165,7 +174,7 @@ section p {
 }
 
 .img-responsive {
-  max-width: 100%;
+  width: 100%;
   display: block;
 }
 
@@ -243,5 +252,13 @@ footer a {
 
   section {
     padding: 40px;
+  }
+
+  .card-header img {
+    display: none;
+  }
+
+  .embed {
+    aspect-ratio: 16/9;
   }
 }
